--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 *.pyd filter=lfs diff=lfs merge=lfs -text
 *.lib filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/clang/native/libclang.dll filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/cv2/cv2.pyd filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.lib filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.pyd filter=lfs diff=lfs merge=lfs -text
