--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ tf_2_15_env/Lib/site-packages/clang/native/libclang.dll filter=lfs diff=lfs merg
 tf_2_15_env/Lib/site-packages/cv2/cv2.pyd filter=lfs diff=lfs merge=lfs -text
 tf_2_15_env/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.lib filter=lfs diff=lfs merge=lfs -text
 tf_2_15_env/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.pyd filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/tensorflow/python/*.pyd filter=lfs diff=lfs merge=lfs -text
+tf_2_15_env/Lib/site-packages/tensorflow/python/*.lib filter=lfs diff=lfs merge=lfs -text
